force-app/main/default/objects/Envelope_Recipient_Template__c/Envelope_Recipient_Template__c.object-meta.xml
<CustomObject>
    <label>Envelope Recipient Template</label>
    <pluralLabel>Envelope Recipient Templates</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Envelope Recipient Template</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>