force-app/main/default/objects/Envelope_Recipient_Template__c/fields/Auth_Mode__c.field-meta.xml
<CustomField>
    <fullName>Auth_Mode__c</fullName>
    <label>Authentication Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email_link</fullName>
                <default>true</default>
                <label>Email Link</label>
            </value>
            <value>
                <fullName>email_code</fullName>
                <label>Email Code</label>
            </value>
            <value>
                <fullName>custom</fullName>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>