force-app/main/default/objects/Envelope_Recipient_Template__c/fields/Default_Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Field__c</fullName>
    <label>Default Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>