force-app/main/default/objects/Envelope_Recipient_Template__c/fields/Envelope_Template__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Template__c</fullName>
    <label>Envelope Template</label>
    <referenceTo>Envelope_Template__c</referenceTo>
    <relationshipLabel>Envelope Recipient Templates</relationshipLabel>
    <relationshipName>Envelope_Template_Recipient_Templates</relationshipName>
    <type>MasterDetail</type>
</CustomField>