force-app/main/default/objects/Envelope_Recipient_Template__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>signer</fullName>
                <default>true</default>
                <label>Signer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>